--- a/src/assets/templates/index.html
+++ b/src/assets/templates/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <img src="./assets/images/test.jpg" alt="test" />
+    <img src="../images/test.jpg" alt="test" />
     <div id="root"></div>
   </body>
 </html>
